--- a/aftman.toml
+++ b/aftman.toml
@@ -4,3 +4,4 @@
 # To add a new tool, add an entry to this table.
 [tools]
 rojo = "rojo-rbx/rojo@7.4.4"
+run-in-roblox = "rojo-rbx/run-in-roblox@0.3.0"
