chore: isolate flux, feat: implement special keys, chore: add ui-labs, feat: setup shop frame

--- a/default.project.json
+++ b/default.project.json
@@ -6,20 +6,16 @@
         "$className": "DataModel",
 
         "ReplicatedStorage": {
+            "packages": {
+                "$path": "packages"
+            },
+
             "shared": {
                 "$path": "src/shared"
             },
 
             "client": {
                 "$path": "src/client"
-            },
-
-            "lab": {
-                "$path": "lab"
-            },
-
-            "tests": {
-                "$path": "tests"
             }
         },
 
