feat: use lune for rojo and darklua, chore: remove bash, chore: convert to string requires

--- a/.luaurc
+++ b/.luaurc
@@ -1,9 +1,11 @@
 {
     "languageMode": "strict",
     "aliases": {
-        "pkg": "packages",
-        "client": "src/client",
-        "server": "src/server",
-        "shared": "src/shared",
+        "pkg": "packages/",
+        "client": "src/client/",
+        "gui": "src/client/gui/",
+        "server": "src/server/",
+        "shared": "src/shared/",
+        "lune": "~/.lune/.typedefs/0.8.9/"
     }
 }
