chore: get rid of darklua, feat: log time taken on tests, feat: queue unit tests, feat: stack unit tests, feat: reactive core unit tests, fix: use type fix, feat: lune tests script

--- a/default.project.json
+++ b/default.project.json
@@ -10,6 +10,10 @@
                 "$path": "packages"
             },
 
+            "tests": {
+                "$path": "tests"
+            },
+
             "shared": {
                 "$path": "src/shared"
             },
