--- a/rokit.toml
+++ b/rokit.toml
@@ -7,3 +7,4 @@
 rojo = "rojo-rbx/rojo@7.4.4"
 lune = "lune-org/lune@0.8.9"
 run-in-roblox = "rojo-rbx/run-in-roblox@0.3.0"
+darklua = "seaofvoices/darklua@0.16.0"
